--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "mocha",
+    "postinstall": "bower install && grunt build"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
