--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/dialogflow": "^3.2.0",
+    "apiai": "^4.0.3",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "dialogflow": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "uuid": "^8.3.0"
   }
 }
