--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@google-cloud/dialogflow": "^3.2.0",
     "apiai": "^4.0.3",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
-    "dialogflow": "^1.2.0",
+    "dialogflow": "^4.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "newrelic": "^7.1.0",
     "node-fetch": "^2.6.0",
     "uuid": "^8.3.0"
   }
