--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/dialogflow": "^3.2.0",
+    "actions-on-google": "^2.1.3",
     "apiai": "^4.0.3",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "dialogflow": "^4.0.3",
+    "dialogflow-fulfillment": "^0.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "newrelic": "^7.1.0",
     "node-fetch": "^2.6.0",
+    "pb-util": "^0.1.3",
     "request": "^2.88.2",
     "uuid": "^8.3.0"
   }
